<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelpMe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">HelpMe</string>

    <string name="sing_up">Регистрация</string>
    <string name="prof_rus">Профиль</string>
    <string name="help_rus">Помощь</string>
    <string name="map_rus">Карта</string>
    <string name="news_rus">Просьбы</string>
    <string name="settings_rus">Настройки</string>
    <string name="exit_rus">Выход</string>

    <string name="sing_up_bel">Рэгістрацыя</string>
    <string name="prof_bel">Профіль</string>
    <string name="help_bel">Дапамога</string>
    <string name="map_bel">Карта</string>
    <string name="news_bel">Просьбы</string>
    <string name="settings_bel">Настройкі</string>
    <string name="exit_bel">Выхад</string>

    <string name="sing_up_en">Registration</string>
    <string name="prof_en">Profile</string>
    <string name="help_en">Help</string>
    <string name="map_en">Map</string>
    <string name="news_en">Requests</string>
    <string name="settings_en">Settings</string>
    <string name="exit_en">Exit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Next</string>
    <string name="action_more">Show in maps</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_login">Login</string>
    <string name="btn_singup">SingUp</string>
    <string name="edt_login">Phone</string>
    <string name="edt_password">Password</string>
    <string name="edt_password_repit">Repit password</string>
    <string name="sing_up_name_first">First name</string>
    <string name="sing_up_name_last">Last name</string>
    <string name="sing_up_phone">Phone (13 symbols)</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_language">Select language...</string>
    <string name="title_city">Select city...</string>
    <string name="title_country">Select country...</string>
    <string name="account_already_exists">Аккаунт уже существует</string>
    <string name="accountType">com.microbox.helpme.account</string>
    <string name="company_name">HelpMe</string>
    //TODO            <string name="not_found_login">goljaspgjasjgpsakgpasg</string>
    <string name="Save_button">Save settings</string>
    <string name="Account_name">ACC_NAME</string>
    <string name="warning_message">Attention! On the phone number will be sent SMS , please enter real phone number!</string>
    <string name="title_activity_phone">Verification Phone Number</string>
    <string name="code">Enter the verification code</string>
    <string name="phone_number">Номер телефона:</string>
    <string name="city">Город:</string>
    <string name="country">Страна:</string>
    <string name="title_activity_google_play_services">GooglePlayServicesActivity</string>
    <string name="title_activity_map">Map</string>

    <string name="error_bel">Памылка</string>
    <string name="error_rus">Ошибка</string>
    <string name="error_en">Error</string>

    <string name="error_rus_login">Неверный логин или пароль</string>
    <string name="error_bel_login">Няверны імя або пароль</string>
    <string name="error_en_login">Incorrect login or password</string>

    <string name="setting_rus">Данные сохранены</string>
    <string name="setting_bel">Дадзенныя захаваны</string>
    <string name="setting_en">Data is saved</string>

    <string name="help_eng">Google Play service is not available</string>
    <string name="help_be">Google Play служба не даступна</string>
    <string name="help_ru">Google Play служба не доступна</string>

    <string name="help_bel_header">Занадта кароткі загаловак</string>
    <string name="help_rus_header">Слишком короткий заголовок</string>
    <string name="help_en_header">Header is too short</string>

    <string name="help_en_error">Connection Failed</string>
    <string name="help_bel_error">Памылка падлучэння</string>
    <string name="help_rus_error">Ошибка подключения</string>

    <string name="help_disconnected">Disconnected</string>

    <string name="image_button">Load photo</string>
</resources>
