<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ProgressBar
        android:id="@android:id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dip">
            <TextView
                android:id="@+id/warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textSize="20sp"
                android:text="@string/warning_message"/>
            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:layout_below="@id/warning"
                android:hint="@string/sing_up_name_first"
                android:paddingBottom="8dip"
                android:paddingTop="8dip"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:maxLength="20"/>
            <EditText
                android:id="@+id/last_name"
                android:layout_below="@id/first_name"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:hint="@string/sing_up_name_last"
                android:paddingBottom="8dip"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:maxLength="20"/>
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_below="@id/last_name"
                android:layout_height="48dip"
                android:maxLength="12"
                android:inputType="number"
                android:hint="@string/sing_up_phone"
                android:paddingBottom="8dip"
                android:singleLine="true"
                android:imeOptions="actionNext"/>
            <EditText
                android:id="@+id/password"
                android:layout_below="@id/phone"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:hint="@string/edt_password"
                android:inputType="textPassword"
                android:paddingBottom="8dip"
                android:singleLine="true"
                android:imeOptions="actionNext"/>
            <EditText
                android:id="@+id/password_repit"
                android:layout_below="@id/password"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:hint="@string/edt_password_repit"
                android:inputType="textPassword"

                android:singleLine="true"
                android:imeOptions="actionNext"/>
            <Spinner
                android:id="@+id/langue"
                android:layout_below="@id/password_repit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <Spinner
                android:id="@+id/country"
                android:layout_below="@id/langue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <Spinner
                android:id="@+id/city"
                android:layout_below="@id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">
            </Spinner>
            <Button
                android:layout_below="@id/city"
                android:layout_width="120dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/action_example"
                android:onClick="onNextClick"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>