<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ProgressBar
        android:id="@android:id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dip">
            <EditText
                android:id="@+id/first"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:hint="@string/sing_up_name_first"
                android:paddingBottom="8dip"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:maxLength="20"/>
            <EditText
                android:id="@+id/last"
                android:layout_below="@id/first"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:hint="@string/sing_up_name_last"
                android:paddingBottom="8dip"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:maxLength="20"/>
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_below="@id/last"
                android:layout_height="48dip"
                android:inputType="textEmailAddress"
                android:hint="@string/sing_up_phone"
                android:paddingBottom="8dip"
                android:singleLine="true"
                android:imeOptions="actionNext"/>
            <EditText
                android:id="@+id/password"
                android:layout_below="@id/email"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:hint="@string/edt_password"
                android:inputType="textPassword"
                android:paddingBottom="8dip"
                android:singleLine="true"
                android:imeOptions="actionNext"/>
            <EditText
                android:id="@+id/password_repit"
                android:layout_below="@id/password"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:hint="@string/edt_password_repit"
                android:inputType="textPassword"

                android:singleLine="true"
                android:imeOptions="actionNext"/>
            <Spinner
                android:id="@+id/langue"
                android:layout_below="@id/password_repit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <Spinner
                android:id="@+id/country"
                android:layout_below="@id/langue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <Spinner
                android:id="@+id/city"
                android:layout_below="@id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dip">
            </Spinner>
            <Button
                android:id="@+id/save"
                android:layout_width="150dip"
                android:layout_height="match_parent"
                android:layout_below="@id/city"
                android:text="@string/Save_button"
                android:layout_alignParentRight="true"/>
            <ImageView
                android:id="@+id/userPhoto"
                android:layout_below="@id/save"
                android:layout_width="120dip"
                android:layout_height="120dip"
                android:layout_centerHorizontal="true"
                android:padding="8dip"
                android:src="@drawable/default_image"/>
            <Button
                android:id="@+id/set_photo"
                android:layout_width="150dip"
                android:layout_height="match_parent"
                android:layout_below="@id/userPhoto"
                android:text="@string/image_button"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>