<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:paddingTop="16dip">

    <ImageView
        android:id="@+id/userPhoto"
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userPhoto"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:text="Евгений Ференц"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@id/userName"
        android:layout_alignTop="@id/userName"
        android:paddingLeft="8dip"
        android:text="0"
        android:textColor="#92d050"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@id/rate"
        android:layout_alignTop="@id/userName"
        android:paddingLeft="8dip"
        android:text="0"
        android:textColor="#92d050"
        android:textSize="20sp" />

    <View
        android:id="@+id/divider_one"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@id/userName"
        android:background="#ccc"
        android:paddingLeft="16dip"
        android:paddingRight="16dip" />

    <TextView
        android:id="@+id/number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_one"
        android:layout_alignParentLeft="true"
        android:paddingTop="8dip"
        android:paddingBottom="8dip"
        android:text="@string/phone_number"
        android:textColor="#000"
        android:textSize="14sp"
        android:paddingLeft="16dip" />

    <TextView
        android:id="@+id/city_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/number_label"
        android:layout_alignParentLeft="true"
        android:paddingBottom="8dip"
        android:text="@string/city"
        android:textColor="#000"
        android:textSize="14sp"
        android:paddingLeft="16dip" />

    <TextView
        android:id="@+id/country_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/city_label"
        android:layout_alignParentLeft="true"
        android:text="@string/country"
        android:textColor="#000"
        android:textSize="14sp"
        android:paddingLeft="16dip" />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_one"
        android:layout_toRightOf="@id/number_label"
        android:padding="8dip"
        android:text="93799929293"
        android:textColor="#000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/prof_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/number"
        android:layout_alignLeft="@id/number"
        android:paddingBottom="8dip"
        android:paddingLeft="8dip"
        android:text="Гродно"
        android:textColor="#000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/prof_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/prof_city"
        android:layout_alignLeft="@id/number"
        android:paddingLeft="8dip"
        android:text="Белорусь"
        android:textColor="#000"
        android:textSize="14sp" />

    <View
        android:id="@+id/divider_two"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@id/prof_country"
        android:background="#ccc"
        android:paddingLeft="16dip"
        android:paddingRight="16dip" />

    <Button
        android:id="@+id/send_comment_prof"
        android:layout_alignParentRight="true"
        android:layout_below="@id/divider_two"
        android:layout_marginTop="12dip"
        android:layout_width="wrap_content"
        android:layout_height="35dip"
        android:layout_marginRight="16dip"
        android:paddingLeft="8dip"
        android:paddingRight="8dip"
        android:background="#dedede"
        android:text="Оставить отзыв" />

    <TextView
        android:id="@+id/comment_label_prof"
        android:layout_marginTop="12dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_two"
        android:layout_marginLeft="16dip"
        android:padding="4dip"
        android:textSize="20sp"
        android:text="Отзывы" />

    <RelativeLayout
        android:layout_marginTop="8dip"

        android:paddingTop="16dip"
        android:id="@+id/message_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eee"
        android:layout_below="@id/divider_two"
        android:visibility="invisible">

        <EditText
            android:id="@+id/message_text_box"
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:gravity="top"
            android:background="#fff"
            android:padding="8dip"
            android:maxLength="255"
            android:visibility="gone" />

        <Button
            android:layout_marginTop="8dip"
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="35dip"
            android:layout_below="@id/message_text_box"
            android:background="#dedede"
            android:text="Отменить" />

        <Button
            android:layout_marginTop="8dip"
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="35dip"
            android:text="Отправить"
            android:layout_alignParentRight="true"
            android:background="#dedede"
            android:layout_below="@id/message_text_box" />
    </RelativeLayout>
</RelativeLayout>